--- a/MAIN/index.html
+++ b/MAIN/index.html
@@ -1,5 +1,6 @@
 <serverun>t</serverun>
 <updatecode>
-  print('GitHub Html')
-  time.sleep(10)
+for i in range(3):
+  print(i)
+time.sleep(10)
 </updatecode>
