--- a/APPLICATION/xINsHENGjIAzHANGhUI/index.html
+++ b/APPLICATION/xINsHENGjIAzHANGhUI/index.html
@@ -1,6 +1,6 @@
 <updatecode>
-print('github_xINsHENGjIAzHANGhUI')
-for i in range(3):
+print('ub_xINsHENGjIAzHANGhUI')
+for i in range(2):
   print(i)
-time.sleep(1)
+time.sleep(0)
 </updatecode>
