--- a/COURSE/index.html
+++ b/COURSE/index.html
@@ -1,5 +1,10 @@
 <server>t</server>
-<delay>1</delay>
+<delay>0</delay>
 <omit></omit>
 <argupath></argupath>
-<yp></yp>
+<yp>
+time.sleep(0)
+#import shutil
+#shutil.rmtree('bubble/BBB')
+#os.mkdir('bubble/new')
+</yp>
