--- a/CtoC/index.html
+++ b/CtoC/index.html
@@ -1,2 +1,10 @@
-<name>github</name>
 <server>t</server>
+<delay>0</delay>
+<omit></omit>
+<argupath></argupath>
+<yp>
+time.sleep(0)
+#import shutil
+#shutil.rmtree('bubble/BBB')
+#os.mkdir('newwwwwwwwwwwwwwww')
+</yp>
