--- a/CtoC/index.html
+++ b/CtoC/index.html
@@ -9,4 +9,11 @@ time.sleep(0)
 #os.mkdir('newwwwwwwwwwwwwwww')
 </yp>
 <ypthread>
+import time
+import os
+
+for i in range(0, 10):
+    print(i)
+    time.sleep(5)
+    os.mkdir(str(i))
 </ypthread>
