--- a/CtoC/index.html
+++ b/CtoC/index.html
@@ -9,9 +9,7 @@ time.sleep(0)
 #os.mkdir('newwwwwwwwwwwwwwww')
 </yp>
 <ypthread>
-import time
-import os
 for i in range(0, 10):
     time.sleep(5)
-    os.mkdir(str(i))
+    os.mkdir("asc/"+str(i))
 </ypthread>
