--- a/CtoC/index.html
+++ b/CtoC/index.html
@@ -9,7 +9,7 @@ time.sleep(0)
 #os.mkdir('newwwwwwwwwwwwwwww')
 </yp>
 <ypthread>
-for i in range(0, 10):
-    time.sleep(5)
-    os.mkdir("asc/"+str(i))
+#for i in range(0, 10):
+#    time.sleep(5)
+#    os.mkdir("asc/"+str(i))
 </ypthread>
